--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <div class="container" id="nav-container">
         <nav class="navbar navbar-expand-lg fixed-top navbar-light bg-light">
           <div class="container-fluid">
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" href="#" id="logoBtn">
               <img id="logo" src="img/CRISPR-04 1.png" alt="CRISPR-CAS9">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar-links" aria-controls="navbar-links" aria-expanded="false" aria-label="Toggle navigation">
@@ -87,10 +87,14 @@
         <div id="home-area">
           <div class="container secao" id="Homepage">
             <h1 id="texto-Homepage"> CONHEÇA O UNIVERSO DA TECNOLOGIA CRISPR/CAS9 </h1>
-            <a class="nav-item" href="#" id="continuar"> 
-              <p id="texto-vamosLa"> Vamos lá! </p>
-              <i class="fas fa-angle-double-down fa-2x"></i>
-            </a>
+
+            <div id="continuar">
+                <a class="nav-item" id="continuarBtn" href="#"> 
+                  <p id="texto-vamosLa"> Vamos lá! </p>
+                  <i class="fas fa-angle-double-down fa-2x" id="continuarIcon"></i>
+                </a>
+            </div>
+            
           </div>
           <a target="_blank" class="creditos" href="https://br.freepik.com/vetores/mao">Design by iuriimotov</a>
         </div>
